# final_vko

./: .gitignore  CameraTrajectory.txt  KeyFrameTrajectory.txt  README.md  bt_run.sh  maze_solver.sh  orb_run.sh  robot_sim_run.sh
logs/: evaluations.npz
ppo_maze/PPO_1/: events.out.tfevents.1766260052.cel.79591.0
ppo_maze/PPO_2/: events.out.tfevents.1766260328.cel.82067.0
ppo_maze_tensorboard/PPO_1/: events.out.tfevents.1766262483.cel.97267.0
ppo_maze_tensorboard/PPO_2/: events.out.tfevents.1766271264.cel.184954.0
ppo_maze_tensorboard/PPO_3/: events.out.tfevents.1766271426.cel.187487.0
ppo_maze_tensorboard/PPO_4/: events.out.tfevents.1766754935.cel.42904.0
ppo_maze_tensorboard/PPO_5/: events.out.tfevents.1766756691.cel.57401.0
src/elton_control_pkg/: CMakeLists.txt  package.xml
src/elton_control_pkg/src/: elton_control.cpp
src/maze_rl_pkg/: package.xml  setup.cfg  setup.py
src/maze_rl_pkg/maze_rl_pkg/: eval.py  maze_env.py  maze_rl_node.py  train.py
src/maze_rl_pkg/test/: test_env.py
src/movement_smoother/: CMakeLists.txt  package.xml
src/movement_smoother/src/: movement_smoother.cpp
src/orb_slam3_ros2/: CMakeLists.txt  package.xml
src/orb_slam3_ros2/CMakeModules/: FindORB_SLAM3.cmake
src/orb_slam3_ros2/config/rgb-d-inertial/: RealSense_D435i.yaml  cam_param.yaml
src/orb_slam3_ros2/src/: camera_calibration.py  orb_slam3_node.cpp
src/robot_controller/: package.xml  setup.py
src/robot_controller/robot_controller/: robot_controller.py
src/robot_controller_sim/: package.xml  setup.cfg  setup.py
src/robot_controller_sim/robot_controller_sim/: robot_controller_sim.py
src/robot_properties/: CMakeLists.txt  package.xml
src/robot_properties/launch/: description.launch.py  gazebo.launch.py  localization_launch.py  nav2_def.launch.py  robot.launch.py
(+15 files in other folders)
